# gpe

./: CloseFile.h  LICENSE  README.md  Solve.hs  WaveFunction.hs  gpe.cabal  modules.sh  stack.yaml  stack_command.txt
app/: Main.hs
src/: CloseFile.c
src/Data/Fits/: FitsIO.lhs
src/Numeric/GPE/: Potential.hs  SaveData.hs  SimulationData.hs  Utils.hs  WaveFunction.hs
