name:                gpe
version:             0.1.0.0
synopsis:            GPE Simulator
description:         GPE Simulator
homepage:            https://github.com/amcphail/gpe#readme
license:             BSD3
license-file:        LICENSE
author:              A. Vivian H. McPhail
maintainer:          haskell.vivian.mcphail@gmail.com
copyright:           Copyright (c) 2017 A. V. H. McPhail
category:            Simulation
build-type:          Simple
extra-source-files:  README.md, modules.sh, stack.yaml, stack_command.txt, include/CloseFile.h
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Fits.FitsIO
                     , Numeric.GPE.Utils		
                     , Numeric.GPE.SimulationData
                     , Numeric.GPE.WaveFunction
                     , Numeric.GPE.Potential
                     , Numeric.GPE.SaveData
                     , Numeric.GPE.Solve
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , bytestring-conversion
                     , mtl
                     , time
                     , filepath
                     , directory
                     , accelerate
                     , accelerate-io
                     , accelerate-fft
                     , accelerate-llvm
                     , accelerate-llvm-ptx
  include-dirs:        include
  includes:            CloseFile.h
  c-sources:           src/CloseFile.c
  extra-libraries:     cfitsio
  ghc-options:         -pgmlg++
  default-language:    Haskell2010

executable gpe-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , gpe
  default-language:    Haskell2010

test-suite gpe-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , gpe
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/amcphail/gpe
